[gd_scene load_steps=9 format=3 uid="uid://bareyjdqdv0qw"]

[ext_resource type="Script" path="res://Scenes/screens/RewardScreen.gd" id="1_teth2"]
[ext_resource type="Texture2D" uid="uid://6nhx6bjh1dd7" path="res://Sprites/ui/screens/moon.png" id="2_eo0sp"]
[ext_resource type="Texture2D" uid="uid://b7gc3g7ku7uu4" path="res://Sprites/ui/screens/forest_fight.png" id="2_irkvw"]
[ext_resource type="Texture2D" uid="uid://e2pvd6ycuw" path="res://Sprites/ui/rewardIcons/gold.png" id="2_mqwrk"]
[ext_resource type="FontFile" uid="uid://35ubclsxhjgd" path="res://Fonts/lunchds.ttf" id="3_rmhc3"]
[ext_resource type="Texture2D" uid="uid://c8n5ra3wa0twl" path="res://Sprites/ui/light_map.webp" id="5_geqtm"]
[ext_resource type="Script" path="res://Scenes/LightShadow.gd" id="6_yf2if"]

[sub_resource type="LabelSettings" id="LabelSettings_0kvu5"]
font = ExtResource("3_rmhc3")
font_size = 96
outline_color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="RewardScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_teth2")

[node name="Moon" type="Sprite2D" parent="."]
position = Vector2(688, -614)
scale = Vector2(2.291, 2.291)
texture = ExtResource("2_eo0sp")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.509804, 0.509804, 0.607843, 1)
position = Vector2(-19, -132.292)
scale = Vector2(2.29097, 2.29097)
texture = ExtResource("2_irkvw")

[node name="Reward" type="Control" parent="."]
anchors_preset = 0
offset_left = -93.0
offset_top = 28.0
offset_right = 91.0
offset_bottom = 209.0

[node name="RewardSprite" type="Sprite2D" parent="Reward"]
position = Vector2(93, 92)
scale = Vector2(3, 3)
texture = ExtResource("2_mqwrk")

[node name="RewardText" type="Label" parent="Reward"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -664.5
offset_top = -98.0
offset_right = 664.5
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_0kvu5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.690196, 0.690196, 0.772549, 1)

[node name="light" type="Node2D" parent="."]
position = Vector2(702, -570)
scale = Vector2(5.94433, 5.94433)

[node name="SpriteLight" type="PointLight2D" parent="light"]
position = Vector2(-0.168238, 0.841135)
color = Color(0.67451, 0.67451, 0.756863, 1)
energy = 0.3
range_z_max = 7
range_item_cull_mask = 6
texture = ExtResource("5_geqtm")
texture_scale = 2.94
height = 30.0
script = ExtResource("6_yf2if")

[node name="UILight" type="PointLight2D" parent="light"]
position = Vector2(-1.02678e-05, -2.05356e-05)
energy = 0.15
range_z_max = 1000
range_item_cull_mask = 4
texture = ExtResource("5_geqtm")
texture_scale = 1.37
script = ExtResource("6_yf2if")

[node name="ShadowLight" type="PointLight2D" parent="light"]
position = Vector2(1.00934, 0.336456)
color = Color(0.67451, 0.67451, 0.756863, 1)
energy = 0.97
range_z_max = 7
shadow_enabled = true
texture = ExtResource("5_geqtm")
texture_scale = 4.06
height = 49.0
script = ExtResource("6_yf2if")

[connection signal="gui_input" from="Reward" to="." method="_on_reward_gui_input"]
[connection signal="mouse_entered" from="Reward" to="." method="_on_reward_mouse_entered"]
[connection signal="mouse_exited" from="Reward" to="." method="_on_reward_mouse_exited"]
